# xiaozhi-esp32

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEBUG_IMAGE_FIX.md  DEVELOP.md  DEVELOPMENT_LOG.md  DF-K10_CONFIG_NOTES.md  LICENSE  LOGO_NETWORK_DOWNLOAD.md  MULTI_DEVICE_README.md  README-Lichuang-S3-Windows.md  README.md  README.vi.md  README_Rotation.md  README_cn.md  README_en.md  README_init.md  README_ja.md  README_pt.md  README_zh.md  ROLE_introduction.txt  SECURITY.md  auth.py  check_class_structure.py  check_database.py  check_kconfig.py  check_sdkconfig.py  config.ini  database.py  demo_multi_device.py  device_instance.py  flash.sh  flash_logger.py  generate_icons.py  get_base64.py  get_info.sh  get_weather_icons.py  http_request_example.md  (+57 more)
agora_rtsa_sdk/example/: CMakeLists.txt  build.sh
board-files/: CMakeLists.txt  Kconfig_fragment.txt  esp32_c6_devkitc1.cc
common_components/esp_cam_sensor/: .component_hash  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  linker.lf  project_include.cmake
common_components/esp_video/: .component_hash  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
components/GxEPD2/: CMakeLists.txt
components/agora_rtc/: .config  CMakeLists.txt
components/aosl/: AGENTS.md  CMakeLists.txt  LICENSE  README.md
components/esp-ml307/: .gitignore  CMakeLists.txt  README.md  esp_http.cc  idf_component.yml  ml307_at_modem.cc  ml307_http.cc  ml307_mqtt.cc  ml307_ssl_transport.cc  tcp_transport.cc  tls_transport.cc  web_socket.cc
components/esp-wifi-connect/: .wifi_configuration_ap.cc.swp  CMakeLists.txt  README.md  idf_component.yml  ssid_manager.cc  wifi_configuration_ap.cc  wifi_station.cc
main/: Application.cc  Application.h  AudioDevice.cc  AudioDevice.h  AudioProcessor.cc  AudioProcessor.h  Board.cc  Board.h  BoxAudioDevice.cc  BoxAudioDevice.h  BuiltinLed.cc  BuiltinLed.h  Button.cc  CMakeLists.txt  Display.cc  Display.h  FirmwareUpgrade.cc  FirmwareUpgrade.h  Kconfig.projbuild  Ml307Board.cc  Ml307Board.h  OpusEncoder.cc  OpusEncoder.h  SystemInfo.cc  SystemInfo.h  SystemReset.cc  SystemReset.h  WakeWordDetect.cc  WakeWordDetect.h  WebSocketClient.cc  WebSocketClient.h  WifiBoard.cc  WifiBoard.h  WifiConfigurationAp.cc  WifiConfigurationAp.h  WifiStation.cc  WifiStation.h  application.cc  application.h  assets.cc  (+80 more)
main/AlarmClock/: AlarmClock.cc  AlarmClock.h
main/assets/: err_pin.p3  err_reg.p3  err_wificonfig.p3  upgrade.p3  wifi_configuration_ap.html
main/audio/: README.md  audio_codec.cc  audio_codec.h  audio_debugger.cc  audio_debugger.h  audio_engine.h  audio_manager.cc  audio_manager.h  audio_processor.h  audio_service.cc  audio_service.h  lock_free_ring_buffer.cc  lock_free_ring_buffer.h  wake_word.h
main/audio_codecs/: adc_pdm_audio_codec.cc  audio_codec.cc  audio_codec.h  box_audio_codec.cc  box_audio_codec.h  box_audio_codec_lite.cc  cores3_audio_codec.cc  es8311_audio_codec.cc  es8311_audio_codec.h  es8374_audio_codec.cc  es8388_audio_codec.cc  es8388_audio_codec.h  k10_audio_codec.cc  no_audio_codec.cc  no_audio_codec.h  sensecap_audio_codec.cc  sensecap_audio_codec.h  t_circle_s3_audio_codec.cc  t_circle_s3_audio_codec.h  tcamerapluss3_audio_codec.cc  tcircles3_audio_codec.cc  tcircles3_audio_codec.h
main/audio_processing/: afe_audio_processor.cc  afe_audio_processor.h  afe_wake_word.cc  afe_wake_word.h  audio_debugger.cc  audio_debugger.h  audio_processor.cc  audio_processor.h  custom_wake_word.cc  custom_wake_word.h  dummy_audio_processor.cc  dummy_audio_processor.h  esp_wake_word.cc  esp_wake_word.h  fft_dsp_processor..h  fft_dsp_processor.cc  no_audio_processor.cc  no_audio_processor.h  no_wake_word.cc  no_wake_word.h  opus_decoder.cc  opus_decoder.h  opus_encoder.cc  opus_encoder.h  opus_resampler.cc  opus_resampler.h  wake_word.h  wake_word_detect.cc  wake_word_detect.h  wake_word_no_afe.cc  wake_word_no_afe.h
main/bluetooth/: README.md  bt_emitter.cc  bt_emitter.h
main/boards/: README.md  config.json  ml307_board.cc  ml307_board.h  wifi_board.cc  wifi_board.h
main/camera/: camera.cc  camera.h  my_camera.cc  my_camera.h  no_camera.cc  no_camera.h
main/display/: animated_eyes.cc  animated_eyes.h  atk_st7789_80i.cc  atk_st7789_80i.h  display.cc  display.h  emoji_carousel.cc  emoji_carousel.h  emoji_collection.cc  emoji_collection.h  emote_display.cc  emote_display.h  esp_lcd_sh8601.c  esp_lcd_sh8601.h  esplog_display.cc  esplog_display.h  face_engine.cc  face_engine.h  idle_screen.cc  idle_screen.h  ili9341_display.cc  ili9341_display.h  img_src_mic_logo.c  lcd_display.cc  lcd_display.h  led_display.cc  led_display.h  matrix_display.cc  matrix_display.h  no_display.cc  no_display.h  oled_display.cc  oled_display.h  oled_home_screen.cc  oled_home_screen.h  rm67162_display.cc  rm67162_display.h  robot_eyes_assets.h  ssd1306_display.cc  ssd1306_display.h  (+4 more)
main/esphomeai/: esphomeai.cc  esphomeai.h
main/features/: CMakeLists.txt
main/fonts/: font_awesome_14_1.c  font_awesome_30_1.c  font_awesome_symbols.h  font_puhui_14_1.c  lv_font_shsans_hc_regular_20.c  lv_font_shsans_hc_regular_20.h
main/input/: button_manager.cc  button_manager.h
main/iot/: README.md  sample_interface.json  thing.cc  thing.h  thing_manager.cc  thing_manager.h
main/led/: circular_strip.cc  circular_strip.h  gpio_led.cc  gpio_led.h  led.cc  led.h  single_led.cc  single_led.h
main/led_strip/: led_strip_wrapper.cc  led_strip_wrapper.h  multiple_led.cc  multiple_led.h  single_led.cc  single_led.h
main/music/: esp32_music.cc  esp32_radio.cc  esp32_sd_music.cc  esp32_sd_music.h
main/protocols/: agora_rtc_protocol.cc  agora_rtc_protocol.h  device_api_client.cc  device_api_client.h  mqtt_protocol.cc  mqtt_protocol.h  protocol.cc  protocol.h  sleep_music_protocol.cc  sleep_music_protocol.h  text_glyph_payload.cc  text_glyph_payload.h  websocket_protocol.cc  websocket_protocol.h
main/sd_card/: sd_card.h  sdmmc.cc  sdmmc.h
main/services/: free_conversation.cc  free_conversation.h  scene_conversation.cc  scene_conversation.h  word_practice.cc  (+1 more)
(+3573 files in other folders)
